Fixed text alignment and added placeholder about section

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Outfit);
 :root {
-        /* Light theme */
+  /* Light theme */
   --bg-col            : #C8FFD4;
   --bg-col2           : rgb(253, 237, 218);
   --bg-col3           : rgb(255, 232, 208);
@@ -22,7 +22,7 @@
   --theme-icon        : "\ea04";
 }
 .dark-mode {
-        /* Dark theme */
+  /* Dark theme */
   --bg-col            : rgb(30, 32, 65);
   --bg-col2           : rgb(40, 43, 78);
   --bg-col3           : rgb(44, 47, 85);
@@ -88,13 +88,10 @@
   top             : 0;
   width           : 100%;
   height          : 50px;
-        /* border-radius   : 10px; */
   text-transform: uppercase;
   font-family   : "Outfit";
   font-size     : 1.5em;
-        /* margin: 0 auto; */
   padding-bottom: 100px;
-        /* padding: 34px 0 34px 0; */
 } 
 @media screen and (max-width: 769px) {
   #nav-bar {
@@ -142,15 +139,14 @@
   font-size      : 0.2em;
   transition     : 0.5s;
   word-spacing   : 2em;
+  text-indent    : -1em;
   text-shadow    : 0px 0px rgba(0, 0, 0, 0.7);
-        /* animation   : spacing 3s ease-in-out infinite; */
+  /* animation   : spacing 5s ease-in-out infinite; */
 }
 @keyframes spacing {
-        /* 25% {
-    text-shadow: -10px 10px rgba(0, 0, 0, 0.7);
-  } */
-  90% {
-    word-spacing: 2em;
+  95% {
+    word-spacing: 4em;
+    /* text-indent    : -2em; */
   }
 }
 @media screen and (max-width: 769px) {
@@ -173,47 +169,46 @@
   }
 }
 
-#Projects {
+#Projects, #About {
   margin-top: 10em;
-    /* border-top   : 5px solid var(--ascent-col);
-  border-bottom: 5px solid var(--ascent-col); */
   border-radius: 50px;
 }
 
-#Projects>div {
-    /* margin        : 5em; */
+#Projects>div, #About>div {
   padding-top   : 50px;
   border-top    : 7px solid var(--ascent-col);
   border-bottom : 7px solid var(--ascent-col);
   border-radius : 50px;
   padding-bottom: 50px;
 }
-#Projects>header {
+#Projects>header, #About>header {
   margin-top    : 0.5em;
   margin-bottom : 1em;
-  margin-left   : auto;
-  margin-right  : auto;
-  padding       : 0;
   font-size     : 6em;
   font-style    : italic;
   letter-spacing: 1em;
+  text-indent   : 1em;
   text-transform: uppercase;
+  width         : 100%;
+  left          : 0;
+  /* transform: translate3d( 50vw ,0,0 ); */
 }
-#Projects h1 {
+#Projects h1, #About h1 {
   text-align    : center;
   font-weight   : 500;
   font-size     : 3em;
   text-transform: uppercase;
   letter-spacing: 0.45em;
+  text-indent   : 0.45em;
 }
-#Projects p {
+#Projects p, #About p {
   text-align : center;
   font-size  : 2em;
   margin     : 50px 50px;
   font-weight: 500;
 }
 
-#Projects img{
+#Projects img, #About img{
   justify-content: center;
   border-radius  : 25px;
   width          : 80%;
@@ -222,7 +217,7 @@
 }
 .float-right { float: right; }
 .float-left { float: left; }
-#Projects video{
+#Projects video, #About video{
   justify-content: center;
   border-radius  : 25px;
   margin         : 50px 0 0 0;
@@ -230,26 +225,28 @@
 
 }
 @media screen and (max-width: 769px) {
-  #Projects>header {
+  #Projects>header, #About>header {
     margin-top    : 0.5em;
     font-size     : 2.5em;
     letter-spacing: 1em;
+    text-indent   : 1em;
     text-transform: uppercase;
   }
-  #Projects h1 {
+  #Projects h1, #About h1 {
     letter-spacing: 0.25em;
+    text-indent   : 0.25em;
     font-size     : 1.8em;
   }
-  #Projects p {
+  #Projects p, #About p {
     text-align: center;
     font-size : 1.5em;
     margin    : 15px;
   }
-  #Projects img {
+  #Projects img, #About img {
     width : 95%;
     margin: 10px 0 0 0;
 }
-  #Projects>div {
+  #Projects>div, #About>div {
     margin        : 1em;
     padding-top   : 10px;
     padding-bottom: 10px;
