--- a/src/css/style.css
+++ b/src/css/style.css
@@ -585,6 +585,7 @@ article:first-child::first-letter {
   -webkit-transition: 0.5s;
   -o-transition     : 0.5s;
   transition        : 0.5s;
+  text-decoration   : none;
 }
 
 .nav ul li a:hover {
